NO-ISSUE: *: implement resource monitor api (#343)
